Add JWT role-based authentication filter and include role claim in token generation