@@ -6,23 +6,27 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.jspecify.annotations.NonNull;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
+@RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
-    @Autowired
-    JwtService jwtService;
+    private final JwtService jwtService;
+    private final UserRepository userRepository;
+    private static final Logger log = LoggerFactory.getLogger(JwtAuthenticationFilter.class);
 
-    @Autowired
-    UserRepository userRepository;
 
     @Override
     protected void doFilterInternal(
@@ -32,24 +36,34 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     ) throws ServletException, IOException {
         String authHeader = request.getHeader("Authorization");
 
-        if(authHeader != null && authHeader.startsWith("Bearer ")) {
-            String token = authHeader.substring(7);
+        if(authHeader == null || !authHeader.startsWith("Bearer ")) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
+        try {
+            String token = authHeader.substring(7);
             String email = jwtService.extractEmail(token);
 
             if(email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                boolean userExists = userRepository.existsByEmail(email);
 
-                if(userExists && jwtService.isTokenValid(token, email)) {
-                    UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                            email,
-                            null,
-                            Collections.emptyList()
-                    );
+                userRepository.findByEmail(email).ifPresent(user -> {
+                    if(jwtService.isTokenValid(token, user.getEmail())) {
+                        List<SimpleGrantedAuthority> authorities =
+                                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()));
 
-                    SecurityContextHolder.getContext().setAuthentication(auth);
-                }
+                        UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                                user,
+                                null,
+                                authorities
+                        );
+
+                        SecurityContextHolder.getContext().setAuthentication(auth);
+                    }
+                });
             }
+        } catch (Exception e) {
+            log.warn("JWT error: " + e.getMessage());
         }
 
         filterChain.doFilter(request, response);
